<resources>
    <string name="app_name">Olympic Weightlifting</string>
    <string name="google_client_id">966264089520-mhe4q88i5945m81nvcn6jk2gint2ubc3.apps.googleusercontent.com</string>
    <string name="facebook_app_id">2074456829502538</string>
    <string name="fb_login_protocol_scheme">fb2074456829502538</string>
    <string name="font_path_samsung_sans_bold">SamsungSans-Bold.ttf</string>
    <string name="font_path_montserrat_medium">Montserrat-Medium.ttf</string>
    <string name="font_path_montserrat_bold">Montserrat-Bold.ttf</string>
    <string name="all_snatch">Snatch</string>
    <string name="all_caj"><![CDATA[Clean & Jerk]]></string>
    <string name="all_calculators">Calculators</string>
    <string name="all_programs">Programs</string>
    <string name="all_tracking">Tracking</string>
    <string name="all_records">Records</string>
    <string name="all_save">Save</string>
    <string name="all_gender_women">Women</string>
    <string name="all_gender_men">Men</string>
    <string name="all_gender">Gender</string>
    <string name="all_total">Total</string>
    <string name="all_settings">Settings</string>
    <string name="all_units">Units</string>
    <string name="all_unit_kg">kg</string>
    <string name="all_unit_lb">lb</string>
    <string name="all_dark_theme">Dark theme</string>
    <string name="all_reps">Reps</string>
    <string name="all_day">Day</string>
    <string name="all_week">Week</string>
    <string name="all_exercise">Exercise</string>
    <string name="all_exercise_manager_button_content_description">Exercise manager</string>
    <string name="all_date">Date</string>
    <string name="all_weight">Weight</string>
    <string name="all_insufficient_input">Fill out all information!</string>
    <string name="all_add">Add</string>
    <string name="all_remove">Remove</string>
    <string name="all_manage_exercises">Manage exercises</string>
    <string name="authentication_feature_unavailable">This feature is only available when you are signed in</string>
    <string name="authentication_continue_to_signin">Continue to sign in</string>
    <string name="signin_facebook_collision_message">Use Google account associated with this email address.</string>
    <string name="signin_facebook_prompt">Sign in with Facebook</string>
    <string name="signin_google_prompt">Sign in with Google</string>
    <string name="signin_anonymous_prompt">Continue as a guest</string>
    <string name="signin_logo_content_description">Logo</string>
    <string name="signin_separator_or">OR</string>
    <string name="signin_profile_identification">Signed in as\u0020</string>
    <string name="signout_prompt">Sign out</string>
    <string name="profile_toolbar_title">User profile</string>
    <string name="profile_upgrade_prompt">Upgrade to Premium</string>
    <string name="lifts_technique">Technique</string>
    <string name="lifts_mistakes">Mistakes</string>
    <string name="lifts_exercises">Exercises</string>
    <string name="lifts_snatch_content_description">Snatch lift picture</string>
    <string name="lifts_caj_content_description">Clean and Jerk lift picture</string>
    <string name="lifts_watch_video">Watch video</string>
    <string name="calculators_tab_sinclair">Sinclair</string>
    <string name="calculators_tab_repmax">Rep Max</string>
    <string name="calculators_tab_loading">Loading</string>
    <string name="calculators_bodyweight">Bodyweight</string>
    <string name="calculators_barbell">Barbell</string>
    <string name="calculators_barbell_men_weight">10 kg</string>
    <string name="calculators_barbell_women_weight">15 kg</string>
    <string name="calculators_barbell_technique_weight">20 kg</string>
    <string name="calculators_collars">Collars</string>
    <string name="calculators_sinclair_result">Sinclair score is\u0020</string>
    <string name="calculators_calculate">Calculate</string>
    <string name="calculators_loading_reps_limit">(1–10)</string>
    <string name="calculators_type">Type</string>
    <string name="calculators_percentage">Percentage</string>
    <string name="calculators_loading_error_weight_smaller_than_bar">Make sure that weight is bigger than the weight of barbell and collars!</string>
    <string name="programs_tab_list">List</string>
    <string name="programs_tab_create">Create</string>
    <string name="programs_name">Name</string>
    <string name="programs_save">Save program</string>
    <string name="programs_error_while_saving">Something went wrong while saving your program!</string>
    <string name="programs_name_error_input">Fill out program name!</string>
    <string name="programs_saved">\u0020program was saved</string>
    <string name="programs_error_too_many_days">There are only 7 days in a week.</string>
    <string name="programs_add_day">Add day</string>
    <string name="programs_reps_title">Reps:</string>
    <string name="programs_sets_title">Sets:</string>
    <string name="programs_add_exercise">Add exercise</string>
    <string name="programs_add_week">Add week</string>
    <string name="programs_empty_history">No programs created yet!</string>
    <string name="tracking_tab_new">Track new</string>
    <string name="tracking_tab_history">History</string>
    <string name="tracking_empty_history">No workouts tracked yet!</string>
    <string name="tracking_workout_saved">Workout has been saved!</string>
    <string name="tracking_sets">Sets</string>
    <string name="tracking_workout_save">Save workout</string>
    <string name="records_tab_personal">Personal</string>
    <string name="records_tab_world">World</string>
    <string name="starting_position_title">Starting Position</string>
    <string name="first_step_title">First Step</string>
    <string name="second_step_title">Second Step</string>
    <string name="third_step_title">Third Step</string>
    <string name="fourth_step_title">Fourth Step</string>
    <string name="fifth_step_title">Fifth Step</string>
    <string name="starting_position_description_caj">Place the feet to the hip width position and turn the toes slightly. Your back should be straight and your thighs approximately parallel to the ground. Grip the bar with clean grip. Use hook grip if you can.</string>
    <string name="first_step_description_caj">Start lifting bar and keep it close to your legs. Your back angle should stay the same and your arms should remain straight.</string>
    <string name="second_step_description_caj">As the bar approaches the mid-thigh position, start extending through the hips. Accelerate with help of your knees, ankles and hips, using speed to move the bar upward. At the end of this phase, the body should be fully extended, leaning slightly back.</string>
    <string name="third_step_description_caj">Start aggressively shrugging and flexing the arms with the elbows up and out. While you rotate your elbows under the bar, pull yourself under it. Receive the bar in the front squat position and continue to descend to the bottom squat position. Raise to the standing position.</string>
    <string name="fourth_step_description_caj">Standing with the bar on the front of your shoulders, slightly bend your knees and do a jerk as powerfully as possible. As the bar leaves the shoulders be sure to put head out of the way, so you won\'t get hit.</string>
    <string name="fifth_step_description_caj">As your feet leaves the floor, place them into receiving position very quickly. Split your feet, with one foot forward and one foot back. Receive the bar with the arms locked out overhead and return to the standing position.</string>
    <string name="snatch_starting_position">Place the feet at hip width position and turn the toes slightly. Your back should be straight and your thighs approximately parallel to the ground. Grip the bar with wide snatch grip (barbell should have an approximate point of where this is). Use hook grip if you can.</string>
    <string name="snatch_first_step">Start lifting the bar and keep it close to your legs. As the bar reaches the middle of your thighs, lift your body to a complete extension in an explosive motion.</string>
    <string name="snatch_second_step">Lift your shoulders back in a shrugging movement as you bring the bar up while putting your elbows out to the side and keeping them above the bar.</string>
    <string name="snatch_third_step">When the bar is high enough, quickly put your body under it. Lock your arms when the bar is in overhead position as you assume a squat position. When your body is stabilized, stand up with your arms still locked.</string>
    <string name="power_clean_title">Power Clean</string>
    <string name="hang_clean_title">Hang Clean</string>
    <string name="overhead_press_title">Overhead Press</string>
    <string name="behind_the_neck_press_title">Behind the Neck Press</string>
    <string name="push_press_title">Push Press</string>
    <string name="clean_deadlift_title">Clean Deadlift</string>
    <string name="clean_pull_title">Clean Pull</string>
    <string name="power_clean_description">Power clean is almost the same as clean. Only difference is that you are not doing full-depth squat. All downward movement should be stopped with your thighs above horizontal position. Aim for the maximum of 4 reps for best technique improvement.</string>
    <string name="hang_clean_description">Grip the bar with clean grip and lift it to the standing position. Lower the bar to the hang position and initiate the clean. Aim for maximum of 4 reps for best technique improvement.</string>
    <string name="overhead_press_description">Stand in the jerk position with bar resting on your shoulders. Using arms, drive the bar aggressively of your shoulder, while pulling the head out of the way. Lock the bar as you reach the overhead position. Aim for the maximum of 10 reps for best technique improvement.</string>
    <string name="behind_the_neck_press_description">Stand with barbell behind your neck with jerk grip. Squeeze your shoulders tightly and press the bar into jerk overhead position. Aim for the maximum of 8 reps.</string>
    <string name="push_press_description">Stand in the jerk position with bar resting on your shoulders. Bend your knees slightly and accelerate the bar aggressively using your legs, while you pull the head out of the way. Lock the bar as you reach the overhead position. Aim for the maximum of 6 reps for best technique improvement.</string>
    <string name="clean_deadlift_description">Stand in the clean position and grip the bar using clean grip. Initiate the lift by pushing with the legs against the floor. While you are keeping your whole body tight, lift the bar into the standing position. Use straps if you need to. Aim for the maximum of 6 reps.</string>
    <string name="clean_pull_description">Stand in the clean position and grip the bar using clean grip. Initiate the lift by pushing with the legs against the floor. While you are keeping your whole body tight, start lifting the bar. When you reach the middle of your thigh, aggressively accelerate the bar, while keeping it close to your body. Use straps if you need to. Aim for the maximum of 5 reps.</string>
    <string name="power_snatch_title">Power Snatch</string>
    <string name="hang_snatch_title">Hang Snatch</string>
    <string name="snatch_press_title">Snatch Press</string>
    <string name="overhead_squat_title">Overhead Squat</string>
    <string name="snatch_deadlift_title">Snatch Deadlift</string>
    <string name="snatch_pull_title">Snatch Pull</string>
    <string name="power_snatch_description">Power snatch is almost same as the snatch. Only difference is that you are not doing full-depth squat. All downward movement should be stopped with your thighs above horizontal position. Aim for the maximum of 4 reps for best technique improvement.</string>
</resources>