<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="?attr/colorDialog"
    android:orientation="vertical"
    android:theme="?attr/controls">

    <TextView
        android:id="@+id/text_dialog_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:gravity="center"
        android:paddingBottom="12dp"
        android:paddingTop="12dp"
        android:text="@string/all_settings"
        android:textColor="@color/colorWhite"
        android:textSize="24sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginTop="10dp"
        android:gravity="center">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/all_units"
            android:textSize="18sp" />

        <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/radiogroup_units"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/kg_radio_button"
                style="?attr/styleText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/all_unit_kg" />

            <RadioButton
                android:id="@+id/lb_radio_button"
                style="?attr/styleText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/all_unit_lb" />
        </RadioGroup>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginTop="10dp"
        android:gravity="center">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/all_dark_theme"
            android:textSize="18sp" />

        <Switch
            android:id="@+id/switch_dark_theme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <Button
        android:id="@+id/button_settings_save"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginBottom="4dp"
        android:layout_marginTop="4dp"
        android:text="@string/all_save" />
</LinearLayout>