<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.olympicweightlifting.authentication.SignInActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:contentDescription="@string/signin_logo_content_description"
        android:src="@drawable/logo" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingLeft="24dp"
        android:paddingRight="24dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:fontFamily="sans-serif-light"
            android:text="Authentication"
            android:textAlignment="center"
            android:textSize="32sp" />
        <Button
            android:id="@+id/button_google_signin"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:layout_margin="6dp"
            android:backgroundTint="#FFFFFF"
            android:drawableStart="@drawable/ic_google"
            android:text="@string/signin_google_prompt"
            android:textColor="#000000" />

        <Button
            android:id="@+id/button_facebook_signin"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:layout_margin="6dp"
            android:backgroundTint="#3C5A96"
            android:drawableStart="@drawable/ic_facebook"
            android:text="@string/signin_facebook_prompt" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <View
                android:layout_width="0dp"
                android:layout_height="2dp"
                android:layout_weight="1"
                android:background="@color/material_grey_800" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="6dp"
                android:layout_marginStart="6dp"
                android:text="@string/signin_separator_or" />

            <View
                android:layout_width="0dp"
                android:layout_height="2dp"
                android:layout_weight="1"
                android:background="@color/material_grey_800" />
        </LinearLayout>

        <Button
            android:id="@+id/button_guest"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:layout_margin="6dp"
            android:drawableStart="@drawable/ic_user"
            android:text="@string/signin_anonymous_prompt" />
    </LinearLayout>
</LinearLayout>
