<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".features.calculators.loading.LoadingCalculatorFragment">

    <TextView
        android:id="@+id/text_weight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="12dp"
        android:text="@string/all_weight"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edittext_weight"
        style="?attr/styleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:background="@android:color/transparent"
        android:gravity="end"
        android:hint="0"
        android:inputType="number"
        android:maxLength="6"
        android:minEms="6"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/text_weight"
        app:layout_constraintEnd_toStartOf="@+id/text_weight_units"
        app:layout_constraintTop_toTopOf="@+id/text_weight" />

    <TextView
        android:id="@+id/text_weight_units"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginEnd="24dp"
        android:gravity="center"
        android:text="@string/all_unit_kg"
        android:textColor="@color/colorSecondaryText"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/text_weight"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/text_weight" />


    <View
        android:id="@+id/separator1"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="12dp"
        android:background="@color/separatorColor"
        app:layout_constraintTop_toBottomOf="@id/text_weight" />

    <TextView
        android:id="@+id/text_barbell_weight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/calculators_barbell"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/text_weight"
        app:layout_constraintTop_toBottomOf="@+id/separator1" />

    <RadioGroup
        android:id="@+id/radiogroup_barbell_weight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checkedButton="@id/radiobutton_men"
        android:orientation="horizontal"
        android:theme="?attr/controls"
        app:layout_constraintBottom_toBottomOf="@+id/text_barbell_weight"
        app:layout_constraintEnd_toEndOf="@+id/text_weight_units"
        app:layout_constraintTop_toTopOf="@+id/text_barbell_weight">

        <RadioButton
            android:id="@+id/radiobutton_technique"
            style="?attr/styleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/calculators_barbell_men_weight" />

        <RadioButton
            android:id="@+id/radiobutton_women"
            style="?attr/styleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/calculators_barbell_women_weight" />

        <RadioButton
            android:id="@+id/radiobutton_men"
            style="?attr/styleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/calculators_barbell_technique_weight" />
    </RadioGroup>

    <View
        android:id="@+id/separator2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="12dp"
        android:background="@color/separatorColor"
        app:layout_constraintTop_toBottomOf="@id/text_barbell_weight" />

    <TextView
        android:id="@+id/text_collars"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/calculators_collars"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/text_weight"
        app:layout_constraintTop_toBottomOf="@+id/separator2" />

    <CheckBox
        android:id="@+id/checkbox_collars"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:theme="?attr/controls"
        app:layout_constraintBottom_toBottomOf="@+id/text_collars"
        app:layout_constraintEnd_toEndOf="@+id/text_weight_units"
        app:layout_constraintStart_toStartOf="@+id/text_weight_units"
        app:layout_constraintTop_toTopOf="@+id/text_collars" />


    <View
        android:id="@+id/separator3"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="12dp"
        android:background="@color/separatorColor"
        app:layout_constraintTop_toBottomOf="@id/text_collars" />


    <Button
        android:id="@+id/button_calculate"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:text="@string/calculators_calculate"
        app:layout_constraintTop_toBottomOf="@id/separator3" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recyclerview_results"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_calculate" />
</android.support.constraint.ConstraintLayout>





