<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_fragment"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    tools:context=".features.calculators.repmax.RepmaxCalculatorFragment">

    <TextView
        android:id="@+id/text_weight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="12dp"
        android:text="@string/all_weight"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edittext_weight"
        style="?attr/styleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:background="@android:color/transparent"
        android:gravity="end"
        android:hint="0"
        android:inputType="numberDecimal"
        android:maxLength="6"
        android:minEms="6"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/text_weight"
        app:layout_constraintEnd_toStartOf="@+id/text_weight_units"
        app:layout_constraintTop_toTopOf="@+id/text_weight" />

    <TextView
        android:id="@+id/text_weight_units"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginEnd="24dp"
        android:gravity="center"
        android:textColor="@color/colorSecondaryText"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/text_weight"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/text_weight" />

    <View
        android:id="@+id/separator1"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="12dp"
        android:background="@color/separatorColor"
        app:layout_constraintTop_toBottomOf="@id/text_weight" />

    <TextView
        android:id="@+id/text_sets"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/all_reps"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/text_weight"
        app:layout_constraintTop_toBottomOf="@+id/separator1" />

    <EditText
        android:id="@+id/edittext_reps"
        style="?attr/styleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:gravity="end"
        android:hint="0"
        android:inputType="number"
        android:maxLength="3"
        android:minEms="6"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/text_sets"
        app:layout_constraintEnd_toEndOf="@+id/text_weight_units"
        app:layout_constraintTop_toTopOf="@+id/text_sets" />

    <View
        android:id="@+id/separator2"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginTop="12dp"
        android:background="@color/separatorColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_sets" />

    <TextView
        android:id="@+id/text_exercise"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/all_exercise"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/text_weight"
        app:layout_constraintTop_toBottomOf="@+id/separator2" />

    <Spinner
        android:id="@+id/spinner_exercise"
        android:layout_width="172dp"
        android:layout_height="wrap_content"
        android:backgroundTint="?attr/colorText"
        app:layout_constraintBottom_toBottomOf="@+id/text_exercise"
        app:layout_constraintEnd_toStartOf="@+id/button_exercise_manager"
        app:layout_constraintTop_toTopOf="@+id/text_exercise" />

    <ImageButton
        android:id="@+id/button_exercise_manager"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:background="?android:selectableItemBackground"
        android:contentDescription="@string/all_exercise_manager_button_content_description"
        android:paddingStart="8dp"
        android:src="@drawable/ic_modify"
        android:tint="@color/colorAccent"
        app:layout_constraintBottom_toBottomOf="@+id/text_exercise"
        app:layout_constraintEnd_toEndOf="@+id/text_weight_units"
        app:layout_constraintStart_toStartOf="@+id/text_weight_units"
        app:layout_constraintTop_toTopOf="@+id/text_exercise" />


    <View
        android:id="@+id/separator3"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="12dp"
        android:background="@color/separatorColor"
        app:layout_constraintTop_toBottomOf="@id/text_exercise" />


    <TextView
        android:id="@+id/text_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/all_date"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/text_weight"
        app:layout_constraintTop_toBottomOf="@+id/separator3" />

    <Button
        android:id="@+id/button_date_picker"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/text_date"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/text_date" />

    <View
        android:id="@+id/separator4"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="12dp"
        android:background="@color/separatorColor"
        app:layout_constraintTop_toBottomOf="@id/text_date" />


    <Button
        android:id="@+id/button_save"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="6dp"
        android:text="@string/all_save"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/separator4" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recyclerview_records"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_save" />


</android.support.constraint.ConstraintLayout>






        


    
